--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
             <section id="intro">
 
                 <header> <!-- Parte do cabeçalho-->
-                    <img src="logo.png" alt="Imagem da Logomarca">
+
+                    <a href="index.html">
+                        <img src="logo.png" alt="Imagem da Logomarca">
+                    </a>
                 </header>
 
                 <main> <!-- Conteudo principal! -->
@@ -54,11 +57,11 @@
         
                 <section id="buttons">
                     <button onclick="onOff()">+ Adicionar Ideai </button>
-                    <button class="fat">Ver ideias</button>
+                    <a href='ideias.html' class="button">Ver ideias</a>
                 </section>
         
                 <footer>
-                    Com ♥ <a href="https://steamcommunity.com/id/ygui__">yGuiCorp</a>
+                    Com ♥ <a href="https://steamcommunity.com/id/ygui__" target="_blank">yGuiCorp</a>
                 </footer>
 
             </section>
